# py3dframe

./: .buildinfo  .buildinfo.bak  .bumpver.toml  LICENSE  Makefile  README.md  api.html  frame_tree.json  genindex.html  index.html  installation.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.py  sg_execution_times.html  usage.html
.doctrees/: api.doctree  environment.pickle  index.doctree  installation.doctree  sg_execution_times.doctree  usage.doctree
.doctrees/_autosummary/: py3dframe.Frame.axes.doctree  py3dframe.Frame.canonical.doctree  py3dframe.Frame.convention.doctree  py3dframe.Frame.copy.doctree  py3dframe.Frame.deepcopy.doctree  py3dframe.Frame.euler_angles.doctree  (+100 more)
_autosummary/: py3dframe.Frame.axes.html  py3dframe.Frame.canonical.html  py3dframe.Frame.convention.html  py3dframe.Frame.copy.html  py3dframe.Frame.deepcopy.html  py3dframe.Frame.euler_angles.html  py3dframe.Frame.from_axes.html  py3dframe.Frame.from_dict.html  py3dframe.Frame.from_euler_angles.html  py3dframe.Frame.from_json.html  py3dframe.Frame.from_quaternion.html  py3dframe.Frame.from_rotation.html  py3dframe.Frame.from_rotation_matrix.html  py3dframe.Frame.from_rotation_vector.html  py3dframe.Frame.get_euler_angles.html  py3dframe.Frame.get_global_euler_angles.html  py3dframe.Frame.get_global_frame.html  py3dframe.Frame.get_global_quaternion.html  py3dframe.Frame.get_global_rotation.html  py3dframe.Frame.get_global_rotation_matrix.html  py3dframe.Frame.get_global_rotation_vector.html  py3dframe.Frame.get_global_translation.html  py3dframe.Frame.get_quaternion.html  py3dframe.Frame.get_rotation.html  py3dframe.Frame.get_rotation_matrix.html  py3dframe.Frame.get_rotation_vector.html  py3dframe.Frame.get_translation.html  py3dframe.Frame.global_axes.html  py3dframe.Frame.global_euler_angles.html  py3dframe.Frame.global_origin.html  py3dframe.Frame.global_quaternion.html  py3dframe.Frame.global_rotation.html  py3dframe.Frame.global_rotation_matrix.html  py3dframe.Frame.global_rotation_vector.html  py3dframe.Frame.global_translation.html  py3dframe.Frame.global_x_axis.html  py3dframe.Frame.global_y_axis.html  py3dframe.Frame.global_z_axis.html  py3dframe.Frame.origin.html  py3dframe.Frame.parent.html  (+66 more)
_docs/: O3_project.html  SO3_project.html  frame.html  frame_transform.html  frame_tree.html  is_O3.html  is_SO3.html  mirror_across_plane.html  rotate_around_axis.html  rotation.html  switch_RT_convention.html  translate.html  translate_along_axis.html
_gallery/: index.html  sg_execution_times.html  system_of_frames.html  tree_of_frame.html
_modules/: index.html
_sources/: api.rst.txt  index.rst.txt  installation.rst.txt  sg_execution_times.rst.txt
api_doc/: O3_project.html  SO3_project.html  frame.html  frame_transform.html  frame_tree.html  inverse_frame.html  is_O3.html  is_SO3.html  is_orthonormal.html  matrix.html  mirror_across_plane.html  orthonormal_frame.html  rotate_around_axis.html  rotation.html  switch_RT_convention.html  transform.html  translate.html  translate_along_axis.html  utils.html
examples/: example.py  using_tree_frame.py
gallery/: GALLERY_HEADER.rst  frame_tree.json  system_of_frames.py
py3dframe/: __init__.py  __main__.py  basis_utils.py  frame.py  frame_binder.py  frame_tree.py  inverse_frame.py  mirror_across_plane.py  rotate_around_axis.py  switch_RT_convention.py  transform.py  translate.py  translate_along_axis.py
source/: api.rst  conf.py  index.rst  usage.rst
tests/: test_frame.py  test_frame_tree.py  test_mirror_across_plane.py  test_rotate_around_axis.py  test_transform.py  test_translate.py  test_translate_along_axis.py
usage_doc/: manage_frames_hierarchy.html  use_frame.html
(+481 files in other folders)
