[build-system]
requires = [
  "setuptools>=42",
  "setuptools-scm>=8.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "pysdic"
requires-python = ">= 3.11"
dynamic = ["version"]
description = "3D Frame of Reference managing tools. Only orthogonal and right-handed frames are supported."
license = {file = "LICENSE"}
authors = [
{name = "Artezaru", email = "artezaru.github@proton.me"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=2.4.2",
    "scipy>=1.17.1",
]

[project.urls]
Homepage = "https://github.com/Artezaru/pysdic"
Documentation = "https://Artezaru.github.io/pysdic"
Source = "https://github.com/Artezaru/pysdic"
Tracker = "https://github.com/Artezaru/pysdic/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pysdic", "pysdic*"]
exclude = ["laboratory", "laboratory.*", "tests", "tests*", "examples", "examples*"]

[tool.setuptools.package-data]
"pysdic.resources" = ["*"]

[tool.setuptools.dynamic]
version = {attr = "pysdic.__version__.__version__"}

[project.readme]
file = "README.md"
content-type = "text/markdown"
