[build-system]
requires = [
  "setuptools>=42",
  "setuptools-scm>=8.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "py3dframe"
requires-python = ">= 3.11"
dynamic = ["version"]
description = "3D Frame of Reference managing tools. Only orthogonal and right-handed frames are supported."
license = {file = "LICENSE"}
authors = [
{name = "Artezaru", email = "artezaru.github@proton.me"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=2.4.2",
    "scipy>=1.17.1",
]

[project.urls]
Homepage = "https://github.com/Artezaru/py3dframe"
Documentation = "https://Artezaru.github.io/py3dframe"
Source = "https://github.com/Artezaru/py3dframe"
Tracker = "https://github.com/Artezaru/py3dframe/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["py3dframe", "py3dframe*"]
exclude = ["laboratory", "laboratory.*", "tests", "tests*", "examples", "examples*"]

[tool.setuptools.package-data]
"py3dframe.resources" = ["*"]

[tool.setuptools.dynamic]
version = {attr = "py3dframe.__version__.__version__"}

[project.readme]
file = "README.md"
content-type = "text/markdown"
